2.1.0   - Fixed dropdown in Command Sets that didn't adhere to new owner display system.
        - Changed a few icons for clarity.
----------------
2.0.2   - Two Reboot checks merged into one for quicker response in Job Processor.
        - Added ability to release build/distribution lock in System Status.
        - Changed randomness to be blocking CSPRNG based for generated passwords and salts.
        - Fixed fault in RNG display for salts.
        - Fixed an issue where the first host type was selected when editing a host instead of the actual type.
        - Performance improvements in both the DB and a handful of pages.
        - Fixed an issue with highlighting being the same colour as the text for matching server aliases in ReverseProxy.
        - Deleted configs are now correctly purged from Git.
        - Configs are now handled individually when committing to Git to stop processes committing each others files.
        - Fixed Command Set owner filter and improved user control of private Command Sets.
        - Remembered to include checksums :).
2.0.1   - Clarified RMin/RMax in IP Sweep.
        - Fixed an issue with Redirects overruling each other.
        - Dropped legacy IP entry in Distribution Status.
        - Fixed an issue where hosts without blocks still had () appear in Rules.
        - Correctly handled broken fingerprint probe in D-Shell.
        - Moved block discovery to common functions. Added block discovery to Jobs.
        - Fixed a bug that prevented ID filtered hosts showing their blocks.
        - Blocks for Hosts in a Host Group are now displayed, floating Blocks are flagged as a risk.
        - Fixed an issue with the Jobs filter not working.
2.0.0   - DSMS repurposed as The Machine. Now includes IP allocation, DNS management, reverse proxy management, 
          sudoers management, D-Shell, Icinga management and LDAP/Active Directory integration.
----------------